--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "request": "^2.61.0",
     "superagent": "^1.1.0",
     "through": "^2.3.7",
+    "utf8": "^3.0.0",
     "validator": "^3.19.0",
     "xml2js": "^0.4.17",
     "xml2json": "^0.9.0"
