--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "through": "^2.3.7",
     "utf8": "^3.0.0",
     "validator": "^3.19.0",
-    "xml2js": "^0.4.17",
-    "xml2json": "^0.9.0"
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "jshint-stylish": "^2.0.1",
